online_judge/usermodule/static/all_submissions/245/error_5.txt
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/245/codefile_5.cpp:1:1: error: ‘kk’ does not name a type
 kk
 ^~
